Author         : Priyanka Chaudhary Description    : Fixed the bug to align Name of tp in center in the main template Files updated  : trainingPartner.html, trainingPartner.css

--- a/NSKFDC App/nskfdc-app-server/src/main/resources/static/css/trainingPartner.css
+++ b/NSKFDC App/nskfdc-app-server/src/main/resources/static/css/trainingPartner.css
@@ -52,8 +52,8 @@ a span{
 
 .nameOfUser{
 	color: #19b2cc;
-    margin-left: 43rem;
-    font-size: 19pt;
+	text-align:center;
+  	padding: 2pt;
 }
 
 .navbar-btn {
